fix message component height and message overlap

--- a/react-app/src/components/Chat/Chat.css
+++ b/react-app/src/components/Chat/Chat.css
@@ -22,7 +22,7 @@
   border: 0.08em solid rgb(193, 193, 193);
   border-radius: 1em;
   
-  width: calc(100% - 4em);
+  width: calc(100% - 2.6em);
   
   padding: 1em;
   margin: 1.3em;
@@ -56,7 +56,7 @@
 .message-card{
   padding-top: 1em;
   
-  min-height: 6.5em;
+  /* min-height: 6.5em; */
   width: 100%;
   
   align-items: center;
